# homework_1_algorithms

./: .gitignore  CMakeLists.txt  GitHub.rtf  HW1_variants.xlsx  README.md  main.cpp  plot_results.py  requirements.txt  run_simple.py  run_simple.sh
include/: DataStructureV1.h  DataStructureV2.h  DataStructureV3.h  IDataStructure.h  benchmark_runner.h  file_utils.h  mem_utils.h  sorting.h  student.h
src/: DataStructureV1.cpp  DataStructureV2.cpp  DataStructureV3.cpp  benchmark_runner.cpp  file_utils.cpp  main.cpp  mem_utils.cpp  run_all.cpp  sorting.cpp
